2010-06-19  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el: Move package-list-packages binding to
	menu-bar.el.
	(describe-package, describe-package-1, package--dir): New funs.
	(package-activate-1): Use package--dir.

	* emacs-lisp/package-x.el (gnus-article-buffer): Require package.

	* help-mode.el (help-package-def): New button type.

	* menu-bar.el: Move package-list-packages binding here from
	package.el.

2010-06-19  Gustav Hållberg  <gustav@gmail.com>  (tiny change)

	* descr-text.el (describe-char): Avoid trailing whitespace.  (Bug#6423)

2010-06-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/edebug.el (edebug-read-list):
	Phase out old-style backquotes.

2010-06-17  Juri Linkov  <juri@jurta.org>

	* help-mode.el (help-mode): Set buffer-local variable
	revert-buffer-function to help-mode-revert-buffer.
	(help-mode-revert-buffer): New function.

	* info.el (Info-revert-find-node): Check for major-mode Info-mode
	before popping to "*info*" (like in other Info functions).
	Keep buffer-name in old-buffer-name.  Keep Info-history-forward in
	old-history-forward.  Pop to old-buffer-name or "*info*" to
	recreate the killed buffer.  Set Info-history-forward from
	old-history-forward.
	(Info-breadcrumbs-depth): Add :group and :version.

2010-06-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs-lisp/package.el (package-menu-mode-map): Add a menu.

2010-06-17  Agustín Martín  <agustin.martin@hispalinux.es>

	* ispell.el (ispell-aspell-find-dictionary): Fix regexp for
	languages like Portuguese with pt_{BR,PT} and no plain pt.

2010-06-17  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/package.el (package-menu-mode-map):
	Move initialization into declaration.

	* menu-bar.el (menu-bar-options-menu): Fix typo in menu entry.

2010-06-17  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/package.el (package-archive-base): Point to
	elpa.gnu.org.
	(package-enable, package-load-list): New defcustoms.